--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@
             <a href="intent://groups.google.com/g/nadeemgamingstudio#Intent;scheme=https;package=com.android.chrome;end" class="btn btn-group">
                 Join Google Group
             </a>
-            <p class="note-text">* क्लोज टेस्टिंग के लिए ग्रुप ज्वाइन करना अनिवार्य है।</p>
+            <p class="note-text">* बटन पर क्लिक करने के बाद Continue पर क्लिक करें</p>
+            <p class="note-text">* ऐप्स डाउनलोड करने के लिए ग्रुप ज्वाइन करना अनिवार्य है।</p>
         </div>
 
         <div class="step-box">
